<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Buttons for Editing and Deleting Reminder at the top -->

    <!-- Reminder Title centered -->

    <!-- Formatted Reminder Time centered -->

    <TextView
        android:id="@+id/reminder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="Reminder Title"
        android:textColor="@color/ic_launcher_background"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/reminder_time"
        android:textColor="@color/secondaryColor"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="1dp">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/edit"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
