<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/time01"
        android:padding="16dp"


        tools:context=".MainActivity">

        <!-- Top Guideline -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <!-- Reminder Title moved to the top -->

        <!-- Select Time Button below Reminder Title -->

        <!-- Set Alarm Button below Select Time Button -->

        <!-- Selected Time TextView moved below buttons -->

        <EditText
            android:id="@+id/ReminderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/enter_reminder"
            android:inputType="text"
            android:textColor="@color/accentColor"
            android:textColorHint="@color/ic_launcher_background"
            app:layout_constraintBottom_toTopOf="@+id/selectTimeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" />

        <Button
            android:id="@+id/selectTimeBtn"
            android:layout_width="187dp"
            android:layout_height="63dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="324dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/select_time"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/setAlarmBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ReminderTitle" />

        <Button
            android:id="@+id/setAlarmBtn"
            android:layout_width="260dp"
            android:layout_height="59dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="336dp"
            android:backgroundTint="#A65618"
            android:text="@string/set_reminder"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectTimeBtn" />

        <TextView
            android:id="@+id/selectedTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setTime"
            android:textAlignment="center"
            android:textColor="@color/hed"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
